fix posts index html

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 <p>Find me in app/views/posts/index.html.erb</p>
 
 
-<% @post.each do |post| %> 
+<% @posts.each do |post| %> 
 
     <%= post.title %>
 
