--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,15 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+  <style>
+  #svgelem {
+     position: relative;
+     left: 10%;
+     -webkit-transform: translateX(-20%);
+     -ms-transform: translateX(-20%);
+     transform: translateX(-20%);
+  }
+  </style>
 </html>
 
 
