--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,4 +1,40 @@
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script>
 
+CanvasRenderingContext2D.prototype.fillPolygon = function (pointsArray, fillColor,     strokeColor) {
+    if (pointsArray.length <= 0) return;
+    this.moveTo(pointsArray[0][0], pointsArray[0][1]);
+    for (var i = 0; i < pointsArray.length; i++) {
+        this.lineTo(pointsArray[i][0], pointsArray[i][1]);
+    }
+    if (strokeColor != null && strokeColor != undefined)
+        this.strokeStyle = strokeColor;
+
+    if (fillColor != null && fillColor != undefined) {
+        this.fillStyle = fillColor;
+        this.fill();
+    }
+}
+
+
+$(document).ready(function(){
+    var canvas=document.getElementById("canvas")
+    var ctx = canvas.getContext('2d');
+var polygonPoints = [[-81.13390268058475, 32.07206917625161],
+[-81.14660562247929, 32.04064386441295],
+[-81.08858407706913, 32.02259853170128],
+[-81.05322183341679, 32.02434500961698],
+[-81.05047525138554, 32.042681017283066],
+[-81.0319358226746, 32.06537765335268],
+[-81.01202310294804, 32.078469305179404],
+[-81.02850259513554, 32.07963291684719],
+[-81.07759774894413, 32.07090546831167],
+[-81.12154306144413, 32.08806865844325],
+[-81.13390268058475, 32.07206917625161]]
+
+ctx.fillPolygon(polygonPoints, '#F00','#000');
+})
+</script>
 
 <h1>Ticket Number <%= @ticket.id %></h1>
 <h4>request_number:  <%= @ticket.request_number %> </h4>
@@ -9,6 +45,4 @@
 <h4>additional_service_area_codes: <%= @ticket.additional_service_area_codes %> </h4>
 
 <h4> WellKnownText </h4>
-<svg id="svgelem" width="100%" height="100%" >
-<polygon points="<%= @ticket.get_polygon_points%>" style="fill:green;" />
-</svg>
+<canvas id="canvas" width="900" height="900">OOPS.. Upgrade your Browser</canvas>
